# tasks

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  FAQ.md  README.md  SETUP.md  requirements.txt
01.1.PythonTools/lecture/: PythonTools.ipynb
01.1.PythonTools/tasks/hello_world/: hello_world.py
01.1.PythonTools/tasks/testlib_test/: testlib_test.py
01.1.PythonTools/testlib_test/: README.md  test_public.py
01.2.BasicTypes/tasks/bin_basic/: bin_basic.py
01.2.BasicTypes/tasks/filter_list_by_list/: filter_list_by_list.py
01.2.BasicTypes/tasks/fizz_buzz/: fizz_buzz.py
01.2.BasicTypes/tasks/iterate_me/: iterate_me.py
01.2.BasicTypes/tasks/make_assert/: make_assert.py  test_public.py
01.2.BasicTypes/tasks/merge_lists/: merge_lists.py
01.2.BasicTypes/tasks/middle_value_of_triple/: middle_value_of_triple.py
01.2.BasicTypes/tasks/reverse_list/: reverse_list.py
01.2.BasicTypes_hard/tasks/bin_tricky/: bin_tricky.py
01.2.BasicTypes_hard/tasks/common_type/: common_type.py
01.2.BasicTypes_hard/tasks/common_type_2/: common_type_2.py
02.1.DataStructures/review/: DataStructures.Solutions.ipynb
02.1.DataStructures/tasks/merge_lists_2/: merge_lists.py
03.1.FunctionsStringsIO/lecture/: FunctionsStringsIO.ipynb  demonstrate_buffer.py
03.2.NumpyAndPandas/lecture/: NumpyAndPandas.ipynb
03.2.NumpyAndPandas/review/: NumpyAndPandas.Solutions.ipynb
04.1.NamespacesAndDecorators/lecture/: NamespacesAndDecorators.ipynb
06.2.ExceptionsContextManagers/lecture/: ExceptionsContextManagers.ipynb
12.1.Asynchrony/lecture/: Asyncrony.ipynb
tools/testlib/: setup.cfg
(+47 files in other folders)
