[metadata]
name = testlib
version = 0.0.3
description = Micro lib useful for checking students solutions
classifiers =
    Topic :: Education :: Testing
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:

[options.package_data]
testlib = py.typed
